Fix z-index

--- a/client/reader/list-stream/style.scss
+++ b/client/reader/list-stream/style.scss
@@ -74,10 +74,11 @@
 	align-items: stretch;
 	display: flex;
 	margin-left: auto;
-	z-index: 1;
+	z-index: z-index( 'root', '.list-stream__header-follow' );
 
 	.follow-button {
 		padding: 0;
+		z-index: z-index( '.list-stream__header-follow', '.follow-button' );
 
 		.gridicon {
 			fill: $blue-medium;
